--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>17</version>
+    <groupId>com.mapr</groupId>
+    <artifactId>mapr-root</artifactId>
+    <version>1.0</version>
   </parent>
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
 
-  <version>0.12.0</version>
+  <version>0.12.0-mapr</version>
 
   <packaging>pom</packaging>
   <name>Apache Mahout</name>
@@ -121,14 +121,32 @@
     <slf4j.version>1.7.19</slf4j.version>
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>2.10.4</scala.version>
-    <spark.version>1.5.2</spark.version>
+    <spark.version>1.5.2-mapr-1603</spark.version>
     <flink.version>1.0.1</flink.version>
     <h2o.version>0.1.25</h2o.version>
+    <!-- MapR custom properties -->
+    <mapr.hadoop.version>1.2.1-mapr</mapr.hadoop.version>
+    <apache.git.tag>0.12.0</apache.git.tag>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <issueManagement>
     <system>Jira</system>
     <url>https://issues.apache.org/jira/browse/MAHOUT</url>
   </issueManagement>
+
+  <distributionManagement>
+    <repository>
+      <id>mapr.staging</id>
+      <name>Mapr Staging Repository</name>
+      <url>${mapr-maven}</url>
+    </repository>
+    <site>
+      <id>mapr.website</id>
+      <name>MapR Site</name>
+      <url>www.mapr.com</url>
+    </site>
+  </distributionManagement>
 
   <repositories>
     <repository>
@@ -140,12 +158,32 @@
       </releases>
     </repository>
     <repository>
-      <id>cloudera</id>
-      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-    </repository>
-    <repository>
       <id>mapr</id>
       <url>http://repository.mapr.com/maven</url>
+    </repository>
+    <repository>
+      <id>repository.mapr.com</id>
+      <url>http://repository.mapr.com/maven/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>central</id>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>Codehaus repository</id>
+      <url>http://repository.codehaus.org/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
@@ -844,7 +882,7 @@
       </activation>
       <properties>
         <hadoop.classifier>hadoop2</hadoop.classifier>
-        <hadoop.version>2.4.1</hadoop.version>
+        <hadoop.version>2.7.0-mapr-1602</hadoop.version>
       </properties>
       <dependencyManagement>
         <dependencies>
