--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout-buildtools</artifactId>
-  <version>0.12.0-mapr</version>
+  <version>0.12.0-mapr-1605</version>
   <name>Mahout Build Tools</name>
 
   <packaging>jar</packaging>
