--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.apache.mahout</groupId>
   <artifactId>mahout</artifactId>
 
-  <version>0.12.0-mapr</version>
+  <version>0.12.0-mapr-1605</version>
 
   <packaging>pom</packaging>
   <name>Apache Mahout</name>
