--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,9 @@
     <hbase.version>1.0.0</hbase.version>
     <lucene.version>4.6.1</lucene.version>
     <slf4j.version>1.7.19</slf4j.version>
-    <scala.compat.version>2.10</scala.compat.version>
-    <scala.version>2.10.4</scala.version>
-    <spark.version>1.5.2-mapr-1603</spark.version>
+    <scala.compat.version>2.11</scala.compat.version>
+    <scala.version>2.11.6</scala.version>
+    <spark.version>2.0.1-mapr-SNAPSHOT</spark.version>
     <flink.version>1.0.3</flink.version>
     <h2o.version>0.1.25</h2o.version>
     <!-- MapR custom properties -->
